// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<div>
  <input
    class="Checkbox-sc-1aq7nos-0 drePYo"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a danger color 1`] = `
<div>
  <input
    class="Checkbox-sc-1aq7nos-0 bXKIqk"
    color="danger"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a hint color 1`] = `
<div>
  <input
    class="Checkbox-sc-1aq7nos-0 dOtEws"
    color="hint"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a info color 1`] = `
<div>
  <input
    class="Checkbox-sc-1aq7nos-0 hTeMTM"
    color="info"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a success color 1`] = `
<div>
  <input
    class="Checkbox-sc-1aq7nos-0 drePYo"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a warning color 1`] = `
<div>
  <input
    class="Checkbox-sc-1aq7nos-0 iHiOUs"
    color="warning"
    type="checkbox"
  />
</div>
`;
